[package]
name = "bitvec_sds"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.0"
bitvec = {version = "1.0.1", features = ["serde"]}
bytemuck = "1.25.0"
rand = "0.9.2"
rand_xoshiro = "0.6"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"

[dev-dependencies]
simple-sds-sbwt = "0.3.2"

[[bench]]
name = "benchmark"
harness = false # means: no nightly #[bench], just a normal main function
